($Id: ChangeLog,v 1.16 2001-03-07 15:19:20 rufustfirefly Exp $)

2001-03-07 10:14 EST  jeff b  <jeff@univrel.pr.uconn.edu>  

	* ChangeLog: started using timestamps in ChangeLog

	* etc/uams/uams_krb4/Makefile.am: fixed reference to send_to_kdc.c typo
	(thanks to Sebastian Rittau)

2001-03-06 13:40  Lance Levsen <l.levsen@printwest.com>

	* FAQ, README, README.ASUN, INSTALL.txt: Moved FAQ, AND READMEs to
	docs/, where they should be.

	* INSTALL/INSTALL.txt: Added ./INSTALL/INSTALL.txt

	* INSTALL/FAQ, README, README.ASUN: Moved README.ASUN, README,
	FAQ to ./INSTALL

2001-03-06 11:47  Andrew Morgan <morgan@orst.edu>

	* TODO: A few updates to papd entry.

	* README.MORGAN: Removed README.MORGAN because that information in
	now in papd's man page.

	* man/man8/papd.8.tmpl: Updated papd man page to match current
	code.  Added descriptions of authenticated printing and other new
	papd options.

2001-02-28 15:43  Marc J. Millar <itlm019@mailbox.ucdavis.edu>

	* libatalk/adouble/ad_open.c: AppleDouble directory creation
	debugging
	
2001-02-28  jeff b  <jeff@univrel.pr.uconn.edu>  

	* etc/afpd/directory.c, etc/afpd/file.c, etc/afpd/filedir.c,
	etc/afpd/unix.c, etc/afpd/unix.h, etc/afpd/volume.h,
	etc/afpd/volume.c, man/man5/AppleVolumes.default.5.tmpl: added
	"dropbox" to available option if DROPKLUDGE is used during
	compile 

2001-02-27  jeff b  <jeff@univrel.pr.uconn.edu>  

	* README: updated 1.5+ install instructions to include list of
	required and recommended packages

	* etc/uams/uams_*.c: cleanups, addition of CVS Id tag to C source

	* configure.in, acconfig.h: change USE_AFS to AFS to be the same as
	all of the defines in the codebase

	* etc/uams/uams_dhx_pam.c: fixed DHX login using this module (last
	patch made with syslog()'s didn't include any brackets) 
	(Bug #233756)

	* distrib/initscripts/.cvsignore: removed pulling of atalk

	* configure.in, etc/uams/Makefile.am: conditional compilation support
	for PGP UAM module using --enable-pgp-uam
